# spicex

./: .gitignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: publish-package.yml  test-package.yml
docs/: README.md  conf.py  index.rst
docs/pages/: about.rst  api.rst  citing.rst  examples.rst  installation.rst  quickstart.rst
examples/capacitor_with_resistor/: README.md  capacitor_with_resistor.py
examples/current_source_with_resistor/: README.md  current_source_with_resistor.py
examples/inductor_with_resistor/: README.md  inductor_with_resistor.py
examples/maximum_power_transfer/: README.md  maximum_power_transfer.py
examples/pfn_optimize/: README.md  pfn_optimize.py
examples/pfn_type_b/: README.md  pfn_type_b.py
examples/rc_step_response/: README.md  rc_step_response.py
examples/resistor_sweep/: README.md  resistor_sweep.py
examples/resistors_in_parallel/: README.md  resistors_in_parallel.py
examples/resistors_in_series/: README.md  resistors_in_series.py
examples/rlc_series/: README.md  rlc_series.py
examples/rlc_series_circuit/: README.md  rlc_series_circuit.py
spicex/: __init__.py  circuit.py  constants.py  optimize.py  sweep.py  utils.py
tests/: test_examples.py  test_validation.py
